<resources>
    <string name="app_name">Go Trip</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="signUp">Sign Up</string>
    <string name="login">Login</string>
    <string name="loginWithFacebook">Login With Facebook</string>
    <string name="loginWithTwitter">Login With Twitter</string>
    <string name="loginWithGmail">Login with Gmail</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="once">Once</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="oneDirection">One Direction</string>
    <string name="round">Round</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="start">Start</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="pastTrips">Past Trips</string>
    <string name="ongoingTrips">Ongoing Trips</string>
    <string name="sync">Sync</string>
    <string name="tripName">Trip Name</string>
    <string name="startPoint">Start Point</string>
    <string name="endPoint">End Point</string>
    <string name="addTrip">Add Trip</string>
    <string name="date">Date</string>
    <string name="language">Language</string>
    <string name="hour">Hour</string>
    <string name="save">Save</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="mapHistory">Map History</string>
    <string name="done">Done</string>
    <string name="canceled">Canceled</string>
    <string name="addNote">Add Note</string>
    <string name="writeNote">Write Your Note Here</string>
    <string name="confirm">Confirm</string>
    <string name="areYouSure">Are you sure you want to delete trip?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="areYouSureHistory">Are You Sure You Want To Delete This Trip From History?</string>
    <string name="cancel">Cancel</string>
    <string name="wannaStartTrip">Do You Want To Start The Trip?</string>
    <string name="itsTimeToStart">It\'s Trip Time</string>
    <string name="nothing">Nothing</string>
    <string name="deleted">Deleted</string>
    <string name="other">Other</string>
</resources>