<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTripActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textLayout_trip_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/tripName"
        app:startIconDrawable="@drawable/ic_baseline_map">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_trip_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textLayout_start"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/textLayout_trip_name"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/startPoint"
        app:startIconDrawable="@drawable/ic_baseline_location">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_trip_start"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textLayout_end"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/textLayout_start"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/endPoint"
        app:startIconDrawable="@drawable/ic_baseline_location">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_trip_end"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textLayout_date"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/textLayout_end"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/date"
        app:startIconDrawable="@drawable/ic_baseline_date">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_trip_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false" />

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textLayout_hour"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/textLayout_date"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/hour"
        app:startIconDrawable="@drawable/ic_baseline_hour">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_trip_hour"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textLayout_hour"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Spinner
            android:id="@+id/spinner_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:entries="@array/repeatSpinnerItems"/>

        <Spinner
            android:id="@+id/spinner_direction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:entries="@array/directionSpinnerItems"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/ic_rounded"
        android:text="@string/addTrip" />

</RelativeLayout>