<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color4"
    tools:context=".RegisterFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/view"
            android:layout_width="302dp"
            android:layout_height="460dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="130dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/back_shape"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.496" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textLayout_email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="200dp"
            app:startIconDrawable="@drawable/ic_baseline_email"
            android:hint="@string/email"
            app:startIconTint="@color/gray"
            style="@style/LoginTextInputLayoutStyle"
            android:theme="@style/LoginTextInputLayoutStyle"
            android:textColorHint="@color/gray"
            app:boxStrokeColor="@color/gray">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/login_email"/>
            
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textLayout_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/textLayout_email"
            app:startIconDrawable="@drawable/ic_baseline_password"
            android:hint="@string/password"
            app:startIconTint="@color/gray"
            style="@style/LoginTextInputLayoutStyle"
            android:theme="@style/LoginTextInputLayoutStyle"
            android:textColorHint="@color/gray"
            app:boxStrokeColor="@color/gray">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/login_password"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textLayout_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:layout_below="@id/textLayout_password"
            app:startIconDrawable="@drawable/ic_baseline_password"
            android:hint="@string/confirmPassword"
            app:startIconTint="@color/gray"
            style="@style/LoginTextInputLayoutStyle"
            android:theme="@style/LoginTextInputLayoutStyle"
            android:textColorHint="@color/gray"
            app:boxStrokeColor="@color/gray">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/register_confirm_password"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_signUp"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_below="@+id/textLayout_confirm_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@drawable/customer_button"
            android:text="@string/signUp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:backgroundTint="@null"/>

    </RelativeLayout>

</FrameLayout>